<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="550dp"
        android:scaleX="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/design_default_color_primary"
        tools:srcCompat="@color/design_default_color_primary" />

    <ImageView
        android:id="@+id/imgBlackBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/design_default_color_primary_dark"
        tools:srcCompat="@color/design_default_color_primary_dark" />

    <ImageView
        android:id="@+id/imgHistoryBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBlackBackground"
        app:srcCompat="?attr/colorOnPrimaryContainer"
        tools:srcCompat="?attr/colorOnPrimaryFixed" />

    <TextView
        android:id="@+id/txtEnterAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/Text_View"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/etTextEnterNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/etTextEnterNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="-10dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/Enter_Age"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <Button
        android:id="@+id/btnGenerateHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="175dp"
        android:text="@string/Btn_Generate_History"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterAge" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Btn_Clear"
        app:layout_constraintEnd_toEndOf="@+id/imgBlackBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterAge" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="365dp"
        android:layout_height="235dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Text_History"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgHistoryBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imgHistoryBackground"
        app:layout_constraintTop_toBottomOf="@+id/imgBlackBackground" />

    <ImageView
        android:id="@+id/imgWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etTextEnterNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_info"
        tools:srcCompat="@android:drawable/ic_dialog_info" />

    <TextView
        android:id="@+id/strWarning1"
        android:layout_width="257dp"
        android:layout_height="53dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="245dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/Warning1"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/strWarning2"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="270dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/Warning2"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/strLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Logo_Name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toTopOf="@+id/imgLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>